[gd_scene load_steps=4 format=3 uid="uid://cb15liyt827ov"]

[ext_resource type="Script" path="res://example/music_player.gd" id="1_h1v1n"]
[ext_resource type="Script" path="res://addons/spotify_node/spotify_node.gd" id="2_nesis"]
[ext_resource type="Texture2D" uid="uid://bg8g33ta1bhdv" path="res://example/Full_Logo_Green_RGB.svg" id="3_vw0yt"]

[node name="MusicPlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MusicPlayerController" type="Node" parent="." node_paths=PackedStringArray("spotify_node", "info_label", "progress_bar", "play_button", "skip_button", "search_input", "queue_container", "search_results_container", "status_label", "album_rect", "artist_rect")]
script = ExtResource("1_h1v1n")
spotify_node = NodePath("SpotifyNode")
info_label = NodePath("../PanelContainer/MarginContainer/VBoxContainer/Player/Playback/SongInfo")
progress_bar = NodePath("../PanelContainer/MarginContainer/VBoxContainer/Player/Playback/ProgressBar")
play_button = NodePath("../PanelContainer/MarginContainer/VBoxContainer/Player/Playback/Buttons/Play")
skip_button = NodePath("../PanelContainer/MarginContainer/VBoxContainer/Player/Playback/Buttons/Skip")
search_input = NodePath("../PanelContainer/MarginContainer/VBoxContainer/Search/SearchInput")
queue_container = NodePath("../PanelContainer/MarginContainer/VBoxContainer/QueueScrollContainer/Queue")
search_results_container = NodePath("../PanelContainer/MarginContainer/VBoxContainer/SearchScrollContainer/SearchResults")
status_label = NodePath("../PanelContainer/MarginContainer/VBoxContainer/Header/Label")
album_rect = NodePath("../PanelContainer/MarginContainer/VBoxContainer/Player/AlbumImage/AlbumTextureRect")
artist_rect = NodePath("../PanelContainer/MarginContainer/VBoxContainer/Player/ArtistImage/ArtistTextureRect")

[node name="SpotifyNode" type="Node" parent="MusicPlayerController"]
script = ExtResource("2_nesis")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureButton" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("3_vw0yt")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 8
horizontal_alignment = 2
vertical_alignment = 1

[node name="Auth" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
text = "Auth settings"

[node name="Player" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ArtistImage" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Player"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="ArtistTextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/Player/ArtistImage"]
layout_mode = 2
expand_mode = 5

[node name="Playback" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Player"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SongInfo" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Player/Playback"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/Player/Playback"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
show_percentage = false

[node name="Buttons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Player/Playback"]
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="Previous" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Player/Playback/Buttons"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
focus_mode = 0
text = "<<"

[node name="Play" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Player/Playback/Buttons"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
focus_mode = 0
text = ">"

[node name="Skip" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Player/Playback/Buttons"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
focus_mode = 0
text = ">>"

[node name="AlbumImage" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Player"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="AlbumTextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/Player/AlbumImage"]
layout_mode = 2
expand_mode = 5

[node name="QueueLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Queue"

[node name="QueueScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="Queue" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/QueueScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Search" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SearchInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/Search"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"

[node name="SearchButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Search"]
layout_mode = 2
focus_mode = 0
text = "Search"

[node name="SearchAndAddButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Search"]
layout_mode = 2
focus_mode = 0
text = "Search & add"

[node name="SearchScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SearchResults" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SearchScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Header/TextureButton" to="MusicPlayerController" method="_on_spotify_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Header/Auth" to="MusicPlayerController" method="_on_auth_settings_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Player/Playback/Buttons/Previous" to="MusicPlayerController" method="_on_previous_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Player/Playback/Buttons/Play" to="MusicPlayerController" method="_on_play_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Player/Playback/Buttons/Skip" to="MusicPlayerController" method="_on_skip_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Search/SearchButton" to="MusicPlayerController" method="_on_search_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Search/SearchAndAddButton" to="MusicPlayerController" method="_on_search_and_add_pressed"]
